# Crash

./: .gitignore  .gitmodules  Crash.xmind
HelloVk/: CMakeLists.txt  HelloVk.xmind
HelloVk/DEP/: CMakeLists.txt
HelloVk/Project/: CMakeLists.txt
HelloVk/Project/Source/: main.cpp
HelloVk/assets/shader/: compile.bat  shader.frag  shader.vert
Project/: CMakeLists.txt  imgui.ini
Project/Client/: CMakeLists.txt
Project/Client/Editor/: CMakeLists.txt
Project/Client/Editor/Include/: EditorActor.h  EditorActorComp.h  EditorDeclare.hpp  EditorRoot.h
Project/Client/Editor/Source/: EditorActor.cpp  EditorActorComp.cpp  EditorRoot.cpp  main.cpp
Project/Client/Include/: HelloAssimp03.h  HelloBlending04.h  HelloCube02.h  HelloGeoShader06.h  HelloInsDraw07.h  HelloSkyCube05.h  HelloTriangle01.h
Project/Client/Runtime/Android/: settings.gradle.kts
Project/Client/Runtime/Android/app/: build.gradle.kts
Project/Client/Runtime/Android/app/src/main/: AndroidManifest.xml
Project/Client/Runtime/Android/app/src/main/assets/Shader/: CommonLighting.txt  CommonUniforms_VS.txt  HelloAssimp03_PS.txt  HelloAssimpOuter03_PS.txt  HelloBlending04_Quad_VS.txt  HelloCube02_PS.txt  HelloGeoRender06_GS.txt  HelloSkyCube05_Mirror_PS.txt  HelloSkyCube05_Mirror_VS.txt  HelloSkyCube05_PS.txt  PointLight_VS.txt
Project/Client/Runtime/Android/app/src/main/cpp/: CMakeLists.txt  main.cpp
Project/Client/Runtime/Android/app/src/main/java/com/example/runtime/: MainActivity.kt
Project/Client/Runtime/Android/app/src/main/res/values/: themes.xml
Project/Client/Runtime/Android/app/src/main/res/values-night/: themes.xml
Project/Client/Runtime/Android/gradle/: libs.versions.toml
Project/Client/Runtime/Android/gradle/wrapper/: gradle-wrapper.properties
Project/Client/Runtime/Windows/: CMakeLists.txt  main.cpp
Project/Client/Source/: HelloAssimp03.cpp  HelloBlending04.cpp  HelloCube02.cpp  HelloGeoShader06.cpp  HelloInsDraw07.cpp  HelloSkyCube05.cpp  HelloTriangle01.cpp
Project/Common/: CMakeLists.txt
Project/Common/Include/: CrashCommonDefines.hpp  CrashLogManager.h  CrashPCH.h  CrashSingleton.hpp
Project/Common/Source/: CrashLogManager.cpp
Project/DEP/: CMakeLists.txt
Project/DEP/GLAD/include/glad/: glad.h
Project/DEP/GLAD/src/: glad.c
Project/DEP/IMGUI/: CMakeLists.txt
Project/Engine/: CMakeLists.txt
Project/Engine/ACS/Include/: CrashActor.h  CrashActorChild.h  CrashActorComp.h
Project/Engine/ACS/Source/: CrashActor.cpp  CrashActorChild.cpp  CrashActorComp.cpp
Project/Engine/Core/Include/: CrashBasicGeometry.h  CrashEngine.h  CrashEngineDeclare.hpp  CrashEntity.h  CrashFileSystem.h  CrashInputMgr.h  CrashLight.h  CrashMaterial.h  CrashRenderOperation.h  CrashRenderable.h  CrashRenderer.h
Project/Engine/Core/Source/: CrashBasicGeometry.cpp  CrashCamera.cpp  CrashEngine.cpp  CrashEntity.cpp  CrashFileSystem.cpp  CrashInputMgr.cpp  CrashLight.cpp  CrashMaterial.cpp  CrashMesh.cpp  CrashModel.cpp  CrashRenderable.cpp  CrashScene.cpp  CrashTexMgr.cpp
Project/Engine/Include/: CrashBasicGeometry.h  CrashCamera.h  CrashEngine.h  CrashEngineDefines.hpp  CrashEntity.h  CrashFileSystem.h  CrashLight.h  CrashMaterial.h  CrashMesh.h  CrashModel.h  CrashRenderOperation.h  CrashRenderer.h  CrashScene.h  CrashTexMgr.h
Project/Engine/Source/: CrashBasicGeometry.cpp  CrashCamera.cpp  CrashEngine.cpp  CrashFileSystem.cpp  CrashLight.cpp  CrashMaterial.cpp  CrashMesh.cpp  CrashModel.cpp  CrashRenderOperation.cpp  CrashRenderer.cpp  CrashScene.cpp  CrashTexMgr.cpp
Project/Render/: CMakeLists.txt
Project/Render/Include/: CrashFrameBuffer.h  CrashRender.h  CrashRenderBuffer.h  CrashRenderCommand.h  CrashRenderDefines.hpp  CrashRenderProtocol.hpp  CrashRenderSystem.h  CrashShaderProgram.h  CrashTexture.h
Project/Render/Source/: CrashFrameBuffer.cpp  CrashRender.cpp  CrashRenderBuffer.cpp  CrashRenderCommand.cpp  CrashRenderSystem.cpp  CrashShaderProgram.cpp  CrashTexture.cpp
Project/assets/Shader/: CommonUniforms_PS.txt  HelloAssimp03_PS.txt  HelloBlending04_Plane_PS.txt  HelloCube02_PS.txt  HelloTriangle01_VS.txt  PointLight_PS.txt
assets/Shader/: CommonUniforms.txt  CommonUniforms_PS.txt  CommonUniforms_VS.txt  HelloAssimp03_VS.txt  HelloBlending04_Plane_VS.txt  HelloBlending04_Quad_PS.txt  HelloCube02_PS.txt  HelloCube02_VS.txt  HelloGeoRender06_PS.txt  HelloGeoRender06_VS.txt  HelloInsDraw07_PS.txt  HelloInsDraw07_VS.txt  HelloSkyCube05_Mirror_PS.txt  HelloSkyCube05_PS.txt  HelloSkyCube05_VS.txt  HelloTriangle01_PS.txt
